# mkdocs-frontmatter-url

./: README.md  pyproject.toml  setup.py
mkdocs_frontmatter_url/: plugin.py
src/mkdocs_frontmatter_url/: plugin.py
test_mkdocs/: mkdocs.yml
test_mkdocs/docs/: index.md
tests/: test_plugin.py
